updated encoding documentation

--- a/documentation/encoding.tex
+++ b/documentation/encoding.tex
@@ -312,7 +312,7 @@ For literals
   \item[floating\_point\_number] two four \_floating\_point\_num ten \_bas
 one \_neg \_exponential \_num (2.4)
   \item[fixed\_point\_number] two \_flo one \_num (2.1)
-  \item[rational] one two \_rational three \_num (1/3)
+  \item[rational] one \_rational three \_num (1/3)
   \item[decimal number] ten \_bas  one one \_num (11)
   \item[hexadecimal number] sixteen \_bas eleven \_num (11)
   \item[vector] world \_word \_and \_voc \_word two sixteen word \_vector (vector of 16
